hidden content under opened overlay on mobiles to prevent scroll with opened overlay

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -154,5 +154,10 @@ a {
           padding: 0.9rem 1.2rem;
         }
       }
+}
 
+.hideonMobile {
+  @media (max-width: 760px) {
+    display: none!important;
+  }
 }
